saas-minikube-kubernetess/namespaces/nano/laravel_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: nano
spec:
  ports:
    - nodePort: 31421
      port: 80
  selector:
    app: laravel
  type: NodePort
