saas-minikube-kubernetess/namespaces/nano/laravel_ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: nano
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-server
    servicePort: 80
  rules:
  - host: hnano.com 
  - http:
      paths:
      - path: /
        backend:
          serviceName: laravel
          servicePort: 80
